deleted unused files, added 2 new fits, added some alt text

--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -27,9 +27,10 @@
    <p>if you asked me to describe my style... i really don't know what i would tell you! my style varies heavily. i like wearing darker colors as well as lighter ones. while most of my wardrobe is very feminine, i also enjoy dressing up a bit more masculine at times. i guess at the moment i am just exploring things out! it just really depends on my mood the night before :3 which is when i'm picking my outfits out.</p>
    <p>this page will contain an outfits of mine that i enjoy wearing! i will also feature pics of my favorite accessories / items.</p>
   </div>
-
   <div class="gallery">
    <h2>outfits</h2>
+   <img class="fit-pic caption-pic" src="!g/fits/18.png" title="silly green fit" alt="overalls with a striped green and black shirt and a froggy hat" tabindex="0">
+   <img class="fit-pic caption-pic" title="i love this skirt so much!" src="!g/fits/17.png" alt="black shirt, purple skirt" tabindex="0">
    <img class="fit-pic caption-pic" title="you will see this type of combo A LOT. i'd be nothing without my floral button up shirts." src="!g/fits/1.png" alt="floral button up, brown silk pants, black converse" tabindex="0">
    <img class="fit-pic caption-pic" title="mushrooms....." src="!g/fits/2.png" alt="button up with a mushroom pattern, olive long skirt, gay converse" tabindex="0">
    <img class="fit-pic caption-pic" title="wore this on october 1st to let everyone know it's october." src="!g/fits/3.png" alt="graphic tomie tee, black and white plaid skirt, black converse" tabindex="0">
@@ -85,13 +86,13 @@
    <img class="fit-pic caption-pic" src="!g/misc/converse.png" alt="classic black converse">
    <h3>misc</h3>
    <img class="fit-pic caption-pic" title="my fitbit versa 2 watch... been wearing it more often now because of work." src="!g/misc/fitbit.png" alt="fitbit versa 2 watch">
-   <img class="fit-pic caption-pic" src="!g/misc/bohug.png" alt="bohug hat">
-   <img class="fit-pic caption-pic" src="!g/misc/honey-neck.png" alt="bohug hat">
+   <img class="fit-pic caption-pic" src="!g/misc/bohug.png" title="bohug hat from artist mysillycomics" alt="bohug hat">
+   <img class="fit-pic caption-pic" src="!g/misc/honey-neck.png" alt="a neckclase with a pot of honey">
   </div>
  </main>
 
  <footer>
-  <p>last updated: <b>15.oct.24</b></p>
+  <p>last updated: <b>01.nov.24</b></p>
   <p><a href="/">go back home?</a> / <a href="/sitemap">sitemap</a></p>
   <p><b>credit:</b> insp by ollie's <a href="https://olliveen.neocities.org/fashion" target="_blank">fashion page</a></p>
  </footer>
