--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -75,7 +75,7 @@ v3 of journal started on 05.jul.24
 				</details>
 			</div>
 
-			<div>
+			<div id="notes">
 				<h3>notes</h3>
 				<li>journal running on version 3 since 06.jul.24</li>
 				<li>i often don't proof read what i write in these</li>
@@ -92,7 +92,7 @@ v3 of journal started on 05.jul.24
 				<p>pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, body bg from <a href="https://unsplash.com/photos/green-grass-field-during-daytime-cPaGBl8R_1M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">unsplash</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
 			</div>
 
-			<div><iframe width="100%" height="215" src="https://www.youtube.com/embed/TXSu0K6iH5A?si=8-Ae-Nh1L9yClSmC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+			<div id="tunes"><iframe width="100%" height="215" src="https://www.youtube.com/embed/TXSu0K6iH5A?si=8-Ae-Nh1L9yClSmC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
 			<div id="footer">
 				<center><img src="https://doqmeat.com/!g/deco/meowsleepu.gif" alt=""></center>
