updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -54,7 +54,6 @@
 			<a title="tuesday - cool site with interesting content!" href="https://tuesdaysplace.neocities.org" target="_blank"><img src="!g/tuesdaysplace.png"></a>
 			<a title="luc - cool site! has nice art and a bunch of links!" href="https://freakphone.net" target="_blank"><img src="!g/freakphone.net.gif"></a>
 			<a title="jorts - charming site! i like their blog" href="https://jorts.neocities.org" target="_blank"><img src="!g/jorts.gif"></a>
-			<a title="mufo - small little site with a nice blog" href="https://mufo.neocities.org" target="_blank"><img src="!g/mufo.gif"></a>
 			<a title="meowcatsrule - cats rule indeed!!! cool photo journal" href="https://meowcatsrule.neocities.org" target="_blank"><img src="!g/meowcatsrule.gif"></a>
 			<a title="jj - very lovely! i love reading about their projects! so charming" href="https://cygnet.neocities.org" target="_blank"><img src="!g/cygnet.png"></a>
 			<a href="https://strawberry-gashes.neocities.org" title="erin - cute pastel site, has a ton of cute resources, and another inspiration for my site!" target="_blank"><img src="!g/strawberry-gashes.gif"></a>
@@ -94,7 +93,6 @@
 			<a title="pom - i cannot even express how much i love this site!!! the webmaster's fursona is so so so cute and the colors of the site are EVERYTHING. i visit this one frequently" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
 			<a title="Becki - sweet personal site with an amazing curation of internet goodies such as pixels!" href="https://sakuradreams.neocities.org" target="_blank"><img src="!g/SakuraDreams.gif"></a>
 			<a title="noah - LOVELYYY and very home-y ? site!!" href="https://scarecrowkid.net/" target="_blank"><img src="!g/scarecrowkid.gif"></a>
-			<a title="bee - beautiful site and art!!! i love this a whole lot" href="https://fatgrrlz.neocities.org/" target="_blank"><img src="!g/fatgrrlz.gif"></a>
 			<a title="rem - love reading this site" href="https://remiku.neocities.org" target="_blank"><img src="!g/remiku.png"></a>
 			<a title="bon - cool site about (some) stuff i dont really get but i do love their art style!" href="https://bondiaries.neocities.org" target="_blank"><img src="!g/bondiaries.png"></a>
 			<a title="dhampyr" href="https://dhampyr.neocities.org" target="_blank"><img src="!g/dhampyr.gif"></a>
@@ -180,7 +178,9 @@
 			<a href="https://midnightsolarium.neocities.org/" target="_blank"><img src="!g/midnightsolarium.gif" alt="midnightsolarium"></a>
 			<a href="https://scftst4rs.neocities.org" target="_blank"><img src="!g/scftst4rs.gif" alt="scftst4rs"></a>
 			<a href="https://firozah.com/" target="_blank"><img src="!g/firozah.gif" alt="firozah"></a>
-			<a href="https://boypussy.neocities.org"><img src="!g/boypussy.gif" alt=""></a>
+			<a href="https://boypussy.neocities.org"><img src="!g/boypussy.gif" alt="boypussy"></a>
+			<a href="https://411.rip/" target="_blank"><img src="!g/411.gif" alt="411"></a>
+			<a href="https://featherfae.neocities.org/" target="_blank"><img src="!g/faetherfae.gif" alt="faetherfae"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
@@ -192,7 +192,7 @@
 			<a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> /
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
 			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a> /
-			<a href="https://maphren.neocities.org/" target="_blank">maphren</a> / <a href="https://innkeeper.neocities.org" target="_blank">innkeeper</a> / <a href="https://karameruu.neocities.org/" target="_blank">karameruu</a>
+			<a href="https://innkeeper.neocities.org" target="_blank">innkeeper</a> /
 			<a href="https://vianamana.neocities.org/" target="_blank">vianamana</a>
 		</p>
 
@@ -222,7 +222,6 @@
 			<a target="_blank" href="https://slashdiv.neocities.org"><img src="https://i.postimg.cc/0QcYFnHv/8831.gif" height="31" width="88"></a>
 			<a href="https://inaka.moe" target="_blank"><img src="!g/inaka.moe.gif"></a>
 			<a href="https://kikki.neocities.org" target="_blank"><img src="!g/kikki.gif"></a>
-			<a href="https://hydrangeagarden.neocities.org" target="_blank"><img src="!g/hydrangeagarden.gif"></a>
 			<a href="https://voyager.neocities.org" target="_blank"><img src="!g/voyager.png"></a>
 			<a href="https://softsnow.neocities.org" target="_blank"><img src="!g/softsnow.png"></a>
 			<a title="dimden - programmer! they have lots of cool stuff too." href="https://dimden.dev/" target="_blank"><img src="https://dimden.dev/services/images/88x31.gif"></a>
@@ -266,7 +265,7 @@
 			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /></a>
 			<a title="jeansgurl98" href="https://jeansgurl98.com" target="_blank"><img src="!g/jeansgurl98.png" alt="jeansgurl98"></a>
 			<a title="dvdnerd" href="https://dvdnerd.neocities.org" target="_blank"><img src="!g/dvdnerd.jpg" alt="dvdnerd"></a>
-			<a href="https://scarecat.neocitied.org" target="_blank"><img src="!g/scarecat.gif" alt="scarecat"></a>
+			<a href="https://scarecat.neocities.org" target="_blank"><img src="!g/scarecat.gif" alt="scarecat"></a>
 			<a href="https://yotsu.neocities.org/" target="_blank"><img src="!g/yotsu.gif"></a>
 			<a href="https://cloudworld.neocities.org/" target="_blank"><img src="!g/cloudworld.gif" alt="cloudworld"></a>
 			<a title="windchime - one of the early sites i discovered. used one of their templates for v1 of doqmeat.com too!" href="https://windchime.neocities.org/" target="_blank"><img src="!g/windchime.gif"></a>
@@ -277,6 +276,8 @@
 			<a href="https://dear-j.neocities.org/" target="_blank"><img src="!g/dear-j.gif" alt="juano"></a>
 			<a href="https://blog.radicaldream.land" target="_blank"><img src="https://i.postimg.cc/QxhG798p/dispatchblog-banner.gif"></a>
 			<a href="https://littlecloud.neocities.org/" target="_blank"><img src="!g/littlecloud.png" alt="littlecloud"></a>
+			<a href="https://maphren.neocities.org/" target="_blank"><img src="https://maphren.neocities.org/imgs/buttons/maphren.gif" alt="maphren"></a>
+			<a href="https://strayos.nekoweb.org/" target="_blank"><img src="https://file.garden/ZwWMmrKYN3y0oqit/graphics/sOS-btn.gif" alt="a teal sitebutton with a slanted left-side. it contains a stylized computer component inside of it, the circuit-board-like symbols of the component breaching the outer-line of the slanted side. there is purple text on it which says strayOS said text is blinking the signal S.O.S. in morse code."></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -318,7 +319,7 @@
 			<a title="graphic collection" href="https://tomomi.neocities.org" target="_blank"><img src="!g/tomomi.gif"></a>
 			<a title="another insane graphics collection, has tons of dividers" href="http://jasminnie.weebly.com" target="_blank"><img src="!g/jasminnie.png"></a>
 			<a title="good resources for people who are new to making websites!" href="https://sadgrl.online/" target="_blank"><img src="https://sadgrl.online/assets/images/buttons/sadgrlonline.gif"></a>
-			<a title="kawaiiness.net, cute site w/ resources, pixels, etc" href="http://kawaiiness.net/home.php" target="_blank"><img src="!g/kawaiiness.net.gif"></a>
+			<a title="kawaiiness.net, cute site w/ resources, pixels, etc" href="https://web.archive.org/web/20231017222637/https://kawaiiness.net/home.php" target="_blank"><img src="!g/kawaiiness.net.gif"></a>
 			<a title="pixel collection" href="https://lostsozai.tumblr.com" target="_blank"><img src="!g/lostsozai.gif"></a>
 			<a title="pixel archive, has tons of favicons" href="https://pixelsafari.neocities.org/" target="_blank"><img src="!g/pixelsafari.gif"></a>
 			<a title="sozaioukoku / tons of web materials! mostly use their patterned bgs" href="http://sozaioukoku.fc2web.com/index.html" target="_blank"><img src="!g/sozaioukoku.gif"></a>
@@ -384,6 +385,9 @@
 		<p>please do let me know if these sites had their URL changed!</p>
 
 		<div id="grave" class="neo">
+			<a title="mufo - small little site with a nice blog" href="https://mufo.neocities.org" target="_blank"><img src="!g/mufo.gif"></a>
+			<a title="bee - beautiful site and art!!! i love this a whole lot" href="https://fatgrrlz.neocities.org/" target="_blank"><img src="!g/fatgrrlz.gif"></a>
+			<a href="https://hydrangeagarden.neocities.org" target="_blank"><img src="!g/hydrangeagarden.gif"></a>
 			<a title="mewtle" href="https://meowii.neocities.org" target="_blank"><img src="!g/meowii.gif"></a>
 			<a title="leanne" href="https://leanneu.neocities.org" target="_blank"><img src="!g/leanne.png"></a>
 			<a title="meg" href="https://lim-lim.neocities.org/" target="_blank"><img src="!g/limlim.jpg"></a>
@@ -400,7 +404,6 @@
 			<a title="kojou - i love all the art around this site!" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
 			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
 			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
-			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
 			<a href="https://panaceas.neocities.org" target="_blank"><img src="!g/panaceas.png"></a>
 			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
 			<a title=" vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
@@ -409,7 +412,9 @@
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
-			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a>
+			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a> /
+			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank">blackwater</a> /
+			<a href="https://karameruu.neocities.org/" target="_blank">karameruu</a>
 		</p>
 
 		<!--box1 end wrapper end div-->
