added some links

--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -263,6 +263,7 @@
 		<li><a href="https://loves1ck.neocities.org/sozai" target="_blank">loves1ck</a> sozai page!</li>
 		<li><a href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html" target="_blank">marsha's graphic garden</a></li>
 		<li><a href="https://hillhouse.neocities.org/shrines/halloween/treats" target="_blank">halloween materials</a> by <a href="https://hillhouse.neocities.org" target="_blank">hillhouse</a></li>
+		<li><a href="https://web.archive.org/web/20181225021334/http://milky.geocities.jp/nyarose00/" target="_blank">nya.rose</a> cute pixel icons and wallpapers</li>
 
 		<h3 id="bgs">backgrounds</h3>
 		<li><a href="http://www.tartanmaker.com" target="_blank">tartan maker</a> - plaid pattern generator, v useful if u want a tiled bg</li>
