--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -38,10 +38,15 @@
 		</div>
 	</div>
 
+	<!-- quizzes  -->
 	<div id="quiz" class="draggable">
-		<div class="header"><img src="!g/folder.png" class="folder"> quizzes<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header"><img src="!g/folder.png" class="folder"> quiz results<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
+				<A href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/3913_Sakura_Miku.jpg" width="100%" alt="Which Hatsune Miku Nendoroid Model Are You?" /><br /></a><A href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F">Which Hatsune Miku Nendoroid Model Are You?</A><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
+				<hr>
+				<A href="https://www.theotaku.com/quizzes/view/3096/which_madoka_magica_girl_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/3096_Mami_Tomoe.jpg" width="100%" alt="Which Madoka Magica Girl Are You?" /><br /></a><A href="https://www.theotaku.com/quizzes/view/3096/which_madoka_magica_girl_are_you%3F">Which Madoka Magica Girl Are You?</A><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
+				<hr>
 				<div style="border:1px solid #999;border-radius:6px;padding:6px;background:#fff;color:#000;min-width:200px;max-width:360px;">
 					<style scoped>
 						.resBarOuter {
