minor changes to homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -18,7 +18,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
 	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css">
 	<link href="!f/v4/body.css" rel="stylesheet" type="text/css">
-	<link class="theme" href="!f/v4/sunset.css" rel="stylesheet" type="text/css">
+	<link class="theme" href="!f/v4/sunset/style.css" rel="stylesheet" type="text/css">
 	<!--	extra -->
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
 	<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
@@ -33,9 +33,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<div id="wrapper">
 		<header id="header">
 			<select name="theme" onchange="pickTheme(this.value)">
-				<option value="!f/v4/sunset.css">homepage theme</option>
-				<option value="!f/v4/sunset.css">sunset</option>
-				<option value="!f/v4/garden.css">garden</option>
+				<!-- <option value="!f/v4/silly/style.css">silly</option> -->
+				<option value="!f/v4/sunset/style.css">sunset</option>
+				<option value="!f/v4/garden/style.css">garden</option>
 			</select>
 			<h1>welcome to doqmeat.com</h1>
 		</header>
@@ -75,7 +75,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3 class="offsite"> offsite</h3>
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"> neocities profile</a>
 			<a title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">source code</a>
-			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink">e-mail</a>
+			<a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a>
 		</nav>
 
 		<div id="intro" class="box">
@@ -127,8 +127,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> orange is the new black + dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> getting rid of this cold</p>
-			<p class="date">last updated on 22.oct.24</p>
+			<p><span class="hl">working on:</span> another homepage theme + <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
+			<p class="date">last updated on 01.nov.24</p>
 
 		</div>
 
@@ -144,7 +144,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats" title="click to see more freaks"><img src="collection/cats/!g/violence.jpg" alt="featured cat" width="90%"></a>
+			<a href="/collection/cats" title="click to see more freaks"><img src="/collection/cats/!g/buenos-dias.jpg" alt="featured cat" width="68%"></a>
 		</div>
 
 
@@ -228,6 +228,14 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<!-- fanlistings -->
 			<div id="listing" class="comm-box">
+				<a href="http://fanique.altervista.org/emoticons/" target="_blank"><img src="!g/web/fanlisting/emoticons.png" alt="emoticons"></a>
+
+				<a href="https://coool.neocities.org/ss/" target="_blank"><img src="!g/web/fanlisting/style-savvy.png" alt="style savvy"></a>
+
+				<a href="https://www.ladyrose.buruma.net/stuffedanimals/general/index.php" target="_blank"><img src="!g/web/fanlisting/stuffed.png" alt="stuffed animals"></a>
+
+				<a href="https://coool.neocities.org/growing/" target="_blank"><img src="!g/web/fanlisting/gwsn.png" alt="gwsn"></a>
+
 				<a href="https://coool.neocities.org/soullady/" target="_blank"><img src="!g/web/fanlisting/yukika.png" alt="yukika"></a>
 
 				<a href="https://fanlistings.melankorin.net/vocaloid/" target="_blank"><img src="!g/web/fanlisting/vocaloid.png" alt="vocaloid fanlisting"></a>
@@ -244,7 +252,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 				<a href="http://fan.after-death.org/magica" target="_blank"><img src="!g/web/fanlisting/madoka.png" alt="madoka fanlisting"></a>
 
-				<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-small.png" alt="siinamota fanlisting"></a>
+				<a title="owned by me!" href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-small.png" alt="siinamota fanlisting"></a>
 
 				<a href="https://www.marheavenj.net/power" target="_blank"><img src="!g/web/fanlisting/power.jpg" alt="power fanlisting"></a>
 
@@ -274,7 +282,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting/88x31kuromi.png" alt="cafe rose banner"></a>
 
 				<br>
-				<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
+				<a title="owned by me!" href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
 				<a href="https://newtopia.neocities.org/" target="_blank"><img src="!g/web/fanlisting/loossemble.png" alt="loossemble"></a>
 				<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting/nso.png" alt="needy streamer overdose fanlisting" style="max-width: 100%"></a>
 
