my dumbass finally figured out why the videos in the cat page werent playing.... i had mp4s in the git ignore file...

--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -26,7 +26,6 @@
 		<div class="column">
 			<video controls>
 				<source src="!g/the-blinker.mp4" type="video/mp4">
-				your browser does not support the video tag :(
 			</video>
 			<img src="!g/buenos-dias.jpg">
 			<img src="!g/cathug.jpg">
@@ -96,6 +95,9 @@
 
 		<!--column 3-->
 		<div class="column">
+			<video controls>
+				<source src="!g/bubble.mp4" type="video/mp4">
+			</video>
 			<img src="!g/jesse-cat.jpg" alt="jesse from breaking bad holding a cat">
 			<img src="!g/paldo-smoking.jpg">
 			<img src="!g/panko.jpg">
