minor changes to music

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -47,6 +47,7 @@
    <a href="featured.html" target="iframe_a">featured music</a>
    <a href="playlists.html" target="iframe_a">playlists</a>
    <a href="listening-log/index.html" target="iframe_a">listening logs</a>
+   <a href="concerts/index.html" target="iframe_a">concerts</a>
    <a href="kpop-producers.html" target="iframe_a">fav kpop producers</a>
    <a href="recaps/index.html" target="iframe_a">yearly recaps</a>
 
