--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -123,12 +123,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/pikmin-4/index.html">pikmin 4</a> + <a href="/vgs/style-savvy-styling-star/index.html">style savvy styling star</a></p>
+			<p><span class="hl">playing:</span> cooking mama: sweet shop + <a href="/vgs/style-savvy-styling-star/index.html">style savvy styling star</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> orange is the new black + dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> another homepage theme + <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
-			<p class="date">last updated on 01.nov.24</p>
+			<p class="date">last updated on 02.nov.24</p>
 
 		</div>
 
