added youtube playlist to journal

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -92,12 +92,17 @@ v3 of journal started on 05.jul.24
 				<p>pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, body bg from <a href="https://unsplash.com/photos/green-grass-field-during-daytime-cPaGBl8R_1M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">unsplash</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
 			</div>
 
-			<div id="tunes"><iframe width="100%" height="215" src="https://www.youtube.com/embed/TXSu0K6iH5A?si=8-Ae-Nh1L9yClSmC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+			<span id="sticky">
+				<div id="tunes">
+					<h3>tunes</h3>
+					<iframe width="100%" height="200" src="https://www.youtube-nocookie.com/embed/videoseries?si=rcHrYLce1vYnaPwI&amp;list=PLJJj3iCewWn0BFushmrCndv4wvcgPVWWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				</div>
 
-			<div id="footer">
-				<center><img src="https://doqmeat.com/!g/deco/meowsleepu.gif" alt=""></center>
-				<p><a href="#">go to the top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
-			</div>
+				<div id="footer">
+					<center><img src="https://doqmeat.com/!g/deco/meowsleepu.gif" alt=""></center>
+					<p><a href="#">go to the top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
+				</div>
+			</span>
 		</aside>
 
 		<iframe id="mainframe" name="log" src="2024/10.html"></iframe>
