--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -110,6 +110,7 @@
 			<details>
 				<summary>finished</summary>
 				<ul>
+<li>orange is the new black</li>
 					<li>smiling friends</li>
 					<li>mob psycho 100</li>
 					<li>paper girls</li>
@@ -153,7 +154,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 27.sep.24</b></p>
+		<p><b>last updated: 03.nov.24</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
